add proxy and tts elevenLabs

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "undici": "^7.15.0"
   }
 }
