--- a/voice-assistant/package.json
+++ b/voice-assistant/package.json
@@ -1,29 +1,14 @@
 {
-  "name": "voice-assistant",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "socks-proxy-agent": "^8.0.5",
-    "undici": "^7.15.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "next": "14.x || 15.x",
+    "react": "18.x",
+    "react-dom": "18.x",
+    "undici": "^6",
+    "socks-proxy-agent": "^8"
   }
 }
